高石さん、小久保さん文追加

--- a/css/module/_booking-tab.scss
+++ b/css/module/_booking-tab.scss
@@ -2,7 +2,7 @@
   width:290px;
   position:relative;
 }
-.booking-tab__buttons span{
+.booking-tab__buttons a{
   color: $color-main;
   font-size: 1.4rem;
   cursor: pointer;
