--- a/css/setting/_setting.scss
+++ b/css/setting/_setting.scss
@@ -7,6 +7,7 @@
 // 色
 $color-main: #6F8D1B; // ベース色
 $color-bright-green: #98AD5C; // 明るいグリーン
+$color-shop-inner: #E5EFCA; //店舗側インナーカラー
 $color-thin-green: #F2F5E9; // 薄いグリーン
 $color-warning: #F4451C; // アラートカラー、注意色
 $color-accent-orange: #F18B22; // アクセントオレンジ
