主婦さん追加分

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -66,7 +66,11 @@
 @import "page/shop/customer_mode/login/E12";
 @import "page/shop/record/D01";
 @import "page/shop/record/member/search/D02";
+@import "page/shop/record/member/input/D05";
+@import "page/shop/record/member/edit/D06";
 @import "page/shop/record/pets/search/D07";
+@import "page/shop/record/pets/input/D10";
+@import "page/shop/record/pets/edit/D11";
 @import "page/shop/record/pets/grooming_order/detail/D13";
 @import "page/shop/record/pets/hotel_order/D17";
 @import "page/shop/record/pets/hotel_order/detail/D18";
@@ -74,6 +78,9 @@
 @import "page/shop/record/pets/grooming_order/interview/detail/D23";
 @import "page/shop/record/pets/grooming_order/interview/edit/D24";
 @import "page/shop/record/pets/hotel_order/interview/input/D25";
+@import "page/shop/record/pets/hotel_order/interview/detail/D26";
+@import "page/shop/record/pets/hotel_order/interview/edit/D27";
+
 
 // @import "page/index";
 
