--- a/css/page/shop/record/pets/grooming_order/detail/_D13.scss
+++ b/css/page/shop/record/pets/grooming_order/detail/_D13.scss
@@ -1,4 +1,4 @@
-@import "../../../../../../../css/setting/setting";
+
 
 // D13-inner
 .D13-inner {
@@ -32,7 +32,7 @@
     display: block;
     position: absolute;
     content: "";
-    background-image: url(../../../../../../../image/common/shop-tab-icon-customer-active.png);
+    background-image: url(/image/common/shop-tab-icon-customer-active.png);
     background-position: center;
     background-size: cover;
     width: 28px;
@@ -51,7 +51,7 @@
     display: block;
     position: absolute;
     content: "";
-    background-image: url(.../../../../../../../image/common/shop-tab-icon-pet-inactive.png);
+    background-image: url(/image/common/shop-tab-icon-pet-inactive.png);
     background-position: center;
     background-size: cover;
     width: 28px;
