--- a/css/page/shop/reservation_month/_C02.scss
+++ b/css/page/shop/reservation_month/_C02.scss
@@ -1,5 +1,71 @@
-@import "../../../../css/setting/reset";
-@import "../../../../css/setting/setting";
+
+.c02__rsdmrl__background {
+    height: 768px;
+    background: $color-icon-default;
+    display: none;
+    position: absolute;
+    width: 100%;
+
+    .c02__rsdmrl__container--white {
+        width: 681px;
+        height: 513px;
+        background: $color-background-base;
+        display: inline-block;
+        border-radius: 10px;
+        margin-top: 133px;
+        margin-left: 172px;
+        text-align: center;
+
+        .c02__rsdmrl__txt--date {
+            font-size: 18px;
+            display: inline-block;
+            vertical-align: top;
+            margin-left: 40px;
+            margin-top: 52px;
+
+        }
+
+        .c02__rsdmrl__reservation-logo {
+            width: 80px;
+            height: 80px;
+            margin-left: 363px;
+            margin-top: 15px;
+
+        }
+
+        .c02__rsdmrl__table__wrapper {
+            width: 601px;
+            margin-left: 40px;
+            position: relative;
+            bottom: 4px;
+
+
+            .c02__rsdmrl__table--left {
+                width: 151px;
+                height: 40px;
+                background: $color-thin-green;
+                font-size: 12px;
+                padding: 10.5px 60px 10.5px 10px;
+            }
+
+            .c02__rsdmrl__table--right {
+                padding-left: 20px;
+                height: 40px;
+                font-size: 12px;
+            }
+        }
+
+        .c02__rsdmrl__button--white {
+            margin-top: 28px;
+        }
+
+
+
+
+
+    }
+
+}
 
 .c02__rsdm__header__pull-down {
     left: 10.5px;
@@ -66,4 +132,9 @@
         }
 
     }
+}
+.c02-month-modal{
+    position: absolute;
+    top: 123px;
+    z-index: 3;
 }
