--- a/css/styles.scss
+++ b/css/styles.scss
@@ -48,12 +48,12 @@
 @import "module/calender2";
 
 @import "page/test";
+@import "page/shop/A01";
 @import "page/shop/A02_login";
 @import "page/shop/attendance_month/B02";
 @import "page/shop/attendance_day/B04_shift-management-day_add";
 @import "page/shop/attendance_day/B04_shift-management-day_edit";
-@import "page/shop/reservation_month/C02_reservation-status-display-month";
-@import "page/shop/reservation_month/C02_reservation-status-display-Month_reservation-list";
+@import "page/shop/reservation_month/C02";
 @import "page/shop/reservation_new/input/C06_make-reservation-new-customer-multiple";
 @import "page/shop/reservation_new/input/C06_make-reservation-new-customer";
 @import "page/shop/reservation_new/input/C06_make-reservation_no-reservation";
@@ -69,6 +69,7 @@
 @import "page/shop/record/D01";
 @import "page/shop/record/member/search/D02";
 @import "page/shop/record/member/D03";
+@import "page/shop/record/member/detail/D04";
 @import "page/shop/record/member/input/D05";
 @import "page/shop/record/member/edit/D06";
 @import "page/shop/record/pets/search/D07";
