--- a/css/page/shop/attendance_day/_B04_shift-management-day_add.scss
+++ b/css/page/shop/attendance_day/_B04_shift-management-day_add.scss
@@ -1,4 +1,3 @@
-
 .b04__smda__background {
     height: 768px;
     width: 1024px;
@@ -6,7 +5,7 @@
 
     .b04__smda__container--white {
         width: 721px;
-        height: 510px;
+        height: 532px;
         background: $color-background-base;
         margin: 107px 131px 129px 172px;
         display: inline-block;
@@ -61,6 +60,10 @@
                     background: $color-bright-green;
                     color: $color-text-sub;
                     margin-right: 20px;
+                }
+
+                .b04__smda__pull-down__select:invalid {
+                    color: #333;
                 }
             }
 
