--- a/css/page/shop/reservation/edit/_C09.scss
+++ b/css/page/shop/reservation/edit/_C09.scss
@@ -1,4 +1,3 @@
-
 .c09__cr__header__pull-down {
     left: 10.5px;
 }
@@ -311,6 +310,10 @@
                     .c09__cr__select__area--course {
                         width: 341px;
                         height: 46px;
+
+                        &:invalid {
+                            color: #333;
+                        }
                     }
                 }
             }
@@ -332,6 +335,10 @@
                     .c09__cr__select__area--stuff {
                         width: 341px;
                         height: 46px;
+
+                        &:invalid {
+                            color: #333;
+                        }
                     }
                 }
 
@@ -352,6 +359,10 @@
                     .c09__cr__select__area--option {
                         width: 341px;
                         height: 46px;
+
+                        &:invalid {
+                            color: #333;
+                        }
                     }
                 }
             }
@@ -374,6 +385,10 @@
                     .c09__cr__select__area--campaign {
                         width: 341px;
                         height: 46px;
+
+                        &:invalid {
+                            color: #333;
+                        }
 
                     }
                 }
@@ -467,6 +482,10 @@
                 width: 432px;
                 height: 140px;
                 margin-top: 8px;
+
+                textarea::placeholder {
+                    color: #d5d5d5;
+                }
             }
         }
 
