--- a/css/page/shop/reservation/edit/_C09_cancel.scss
+++ b/css/page/shop/reservation/edit/_C09_cancel.scss
@@ -1,4 +1,3 @@
-
 .c09__crcr__background {
     height: 768px;
     background: $color-icon-default;
@@ -50,6 +49,9 @@
                     margin-top: 6px;
                     height: 46px;
 
+                    .c09__crcr__cancel-reason__select {
+                        color: #333;
+                    }
                 }
 
             }
@@ -64,6 +66,10 @@
                 .c09__crcr__other-memos__textarea__wrapper {
                     margin-top: 6px;
                     height: 140px;
+
+                    textarea::placeholder {
+                        color: #d5d5d5;
+                    }
                 }
             }
 
