--- a/css/page/shop/reservation_new/input/_C06_make-reservation-new-customer.scss
+++ b/css/page/shop/reservation_new/input/_C06_make-reservation-new-customer.scss
@@ -1,4 +1,3 @@
-
 .c06__mrnc__header__pull-down {
     left: 10.5px;
 }
@@ -141,6 +140,10 @@
                             height: 46px;
                             width: 340px;
                             background: $color-background-base;
+
+                            &:invalid {
+                                color: #333;
+                            }
                         }
                     }
                 }
@@ -318,6 +321,10 @@
                     .c06__mrnc__select__area--course {
                         width: 341px;
                         height: 46px;
+
+                        &:invalid {
+                            color: #333;
+                        }
                     }
                 }
             }
@@ -339,6 +346,10 @@
                     .c06__mrnc__select__area--stuff {
                         width: 341px;
                         height: 46px;
+
+                        &:invalid {
+                            color: #333;
+                        }
                     }
                 }
 
@@ -359,6 +370,10 @@
                     .c06__mrnc__select__area--option {
                         width: 341px;
                         height: 46px;
+
+                        &:invalid {
+                            color: #333;
+                        }
                     }
                 }
             }
@@ -381,6 +396,10 @@
                     .c06__mrnc__select__area--campaign {
                         width: 341px;
                         height: 46px;
+
+                        &:invalid {
+                            color: #333;
+                        }
 
                     }
                 }
@@ -495,7 +514,7 @@
                     display: inline-block;
 
                     &::after {
-                        left: 5.5px;
+                        left: 4.5px;
                     }
                 }
             }
